--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="button_normal_blue">#2563EB</color>
+    <color name="button_pressed_blue">#1113D8</color>
+    <color name="button_hovered_blue">#3B82F6</color>
+    <color name="button_disabled_gray">#9CA3AF</color>
 </resources>
