- clickable recycle view items onItemClick and onItemLongClick - modified TravelViewHolder to have description

--- a/app/src/main/res/layout/travel_item.xml
+++ b/app/src/main/res/layout/travel_item.xml
@@ -78,5 +78,26 @@
             app:layout_constraintEnd_toEndOf="parent"
             tools:text="$199" />
 
+        <TextView
+            android:id="@+id/textViewDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp"
+            android:background="@drawable/item_label_background"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:paddingTop="6dp"
+            android:paddingBottom="6dp"
+            android:textColor="#FFFFFF"
+            android:textSize="12sp"
+            android:fontFamily="sans-serif-medium"
+            android:maxLines="1"
+            android:ellipsize="end"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:visibility="visible"
+            tools:text="Beach Resort" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
