--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="primary">#007AFF</color>
+    <color name="black">#000000</color>
+    <color name="light_gray">#F5F5F5</color>
+    <color name="disabled_gray">#CCCCCC</color>
+    <color name="white">#FFFFFF</color>
     <color name="button_normal_blue">#2563EB</color>
     <color name="button_pressed_blue">#1113D8</color>
     <color name="button_hovered_blue">#3B82F6</color>
